Interactive plot test

--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -4,17 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization of Gun Violence Dataset"
+    "# Interactivity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary packages\n",
@@ -23,12 +19,13 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from ipywidgets import widgets"
+    "from ipywidgets import widgets\n",
+    "import folium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -56,14 +53,14 @@
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>incident_id</th>\n",
-       "      <th>date</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
        "      <th>state</th>\n",
        "      <th>city_or_county</th>\n",
        "      <th>address</th>\n",
        "      <th>n_killed</th>\n",
        "      <th>n_injured</th>\n",
-       "      <th>congressional_district</th>\n",
-       "      <th>gun_stolen</th>\n",
        "      <th>...</th>\n",
        "      <th>longitude</th>\n",
        "      <th>n_guns_involved</th>\n",
@@ -82,14 +79,14 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>461105</td>\n",
-       "      <td>2013-01-01</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Pennsylvania</td>\n",
        "      <td>Mckeesport</td>\n",
        "      <td>1506 Versailles Avenue and Coursin Street</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>-79.8559</td>\n",
        "      <td>NaN</td>\n",
@@ -106,14 +103,14 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>460726</td>\n",
-       "      <td>2013-01-01</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>California</td>\n",
        "      <td>Hawthorne</td>\n",
        "      <td>13500 block of Cerise Avenue</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>-118.3330</td>\n",
        "      <td>NaN</td>\n",
@@ -130,14 +127,14 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>478855</td>\n",
-       "      <td>2013-01-01</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Ohio</td>\n",
        "      <td>Lorain</td>\n",
        "      <td>1776 East 28th Street</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0::Unknown||1::Unknown</td>\n",
        "      <td>...</td>\n",
        "      <td>-82.1377</td>\n",
        "      <td>2.0</td>\n",
@@ -154,14 +151,14 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>478925</td>\n",
-       "      <td>2013-01-05</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "      <td>Colorado</td>\n",
        "      <td>Aurora</td>\n",
        "      <td>16000 block of East Ithaca Place</td>\n",
        "      <td>4</td>\n",
        "      <td>0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>-104.8020</td>\n",
        "      <td>NaN</td>\n",
@@ -178,14 +175,14 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>478959</td>\n",
-       "      <td>2013-01-07</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>North Carolina</td>\n",
        "      <td>Greensboro</td>\n",
        "      <td>307 Mourning Dove Terrace</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0::Unknown||1::Unknown</td>\n",
        "      <td>...</td>\n",
        "      <td>-79.9569</td>\n",
        "      <td>2.0</td>\n",
@@ -200,37 +197,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  incident_id        date           state city_or_county  \\\n",
-       "0           0       461105  2013-01-01    Pennsylvania     Mckeesport   \n",
-       "1           1       460726  2013-01-01      California      Hawthorne   \n",
-       "2           2       478855  2013-01-01            Ohio         Lorain   \n",
-       "3           3       478925  2013-01-05        Colorado         Aurora   \n",
-       "4           4       478959  2013-01-07  North Carolina     Greensboro   \n",
+       "   Unnamed: 0  incident_id  year  month  day           state city_or_county  \\\n",
+       "0           0       461105  2013      1    1    Pennsylvania     Mckeesport   \n",
+       "1           1       460726  2013      1    1      California      Hawthorne   \n",
+       "2           2       478855  2013      1    1            Ohio         Lorain   \n",
+       "3           3       478925  2013      1    5        Colorado         Aurora   \n",
+       "4           4       478959  2013      1    7  North Carolina     Greensboro   \n",
        "\n",
-       "                                     address  n_killed  n_injured  \\\n",
-       "0  1506 Versailles Avenue and Coursin Street         0          4   \n",
-       "1               13500 block of Cerise Avenue         1          3   \n",
-       "2                      1776 East 28th Street         1          3   \n",
-       "3           16000 block of East Ithaca Place         4          0   \n",
-       "4                  307 Mourning Dove Terrace         2          2   \n",
+       "                                     address  n_killed  n_injured  ...  \\\n",
+       "0  1506 Versailles Avenue and Coursin Street         0          4  ...   \n",
+       "1               13500 block of Cerise Avenue         1          3  ...   \n",
+       "2                      1776 East 28th Street         1          3  ...   \n",
+       "3           16000 block of East Ithaca Place         4          0  ...   \n",
+       "4                  307 Mourning Dove Terrace         2          2  ...   \n",
        "\n",
-       "   congressional_district              gun_stolen  ... longitude  \\\n",
-       "0                    14.0                     NaN  ...  -79.8559   \n",
-       "1                    43.0                     NaN  ... -118.3330   \n",
-       "2                     9.0  0::Unknown||1::Unknown  ...  -82.1377   \n",
-       "3                     6.0                     NaN  ... -104.8020   \n",
-       "4                     6.0  0::Unknown||1::Unknown  ...  -79.9569   \n",
-       "\n",
-       "  n_guns_involved                    participant_age  \\\n",
-       "0             NaN                              0::20   \n",
-       "1             NaN                              0::20   \n",
-       "2             2.0  0::25||1::31||2::33||3::34||4::33   \n",
-       "3             NaN         0::29||1::33||2::56||3::33   \n",
-       "4             2.0         0::18||1::46||2::14||3::47   \n",
+       "   longitude n_guns_involved                    participant_age  \\\n",
+       "0   -79.8559             NaN                              0::20   \n",
+       "1  -118.3330             NaN                              0::20   \n",
+       "2   -82.1377             2.0  0::25||1::31||2::33||3::34||4::33   \n",
+       "3  -104.8020             NaN         0::29||1::33||2::56||3::33   \n",
+       "4   -79.9569             2.0         0::18||1::46||2::14||3::47   \n",
        "\n",
        "                            participant_gender  \\\n",
        "0         0::Male||1::Male||3::Male||4::Female   \n",
@@ -239,12 +229,19 @@
        "3         0::Female||1::Male||2::Male||3::Male   \n",
        "4       0::Female||1::Male||2::Male||3::Female   \n",
        "\n",
-       "                                    participant_name participant_relationship  \\\n",
-       "0                                     0::Julian Sims                      NaN   \n",
-       "1                                  0::Bernard Gillis                      NaN   \n",
-       "2  0::Damien Bell||1::Desmen Noble||2::Herman Sea...                      NaN   \n",
-       "3  0::Stacie Philbrook||1::Christopher Ratliffe||...                      NaN   \n",
-       "4  0::Danielle Imani Jameison||1::Maurice Eugene ...                3::Family   \n",
+       "                                    participant_name  \\\n",
+       "0                                     0::Julian Sims   \n",
+       "1                                  0::Bernard Gillis   \n",
+       "2  0::Damien Bell||1::Desmen Noble||2::Herman Sea...   \n",
+       "3  0::Stacie Philbrook||1::Christopher Ratliffe||...   \n",
+       "4  0::Danielle Imani Jameison||1::Maurice Eugene ...   \n",
+       "\n",
+       "   participant_relationship  \\\n",
+       "0                       NaN   \n",
+       "1                       NaN   \n",
+       "2                       NaN   \n",
+       "3                       NaN   \n",
+       "4                 3::Family   \n",
        "\n",
        "                                  participant_status  \\\n",
        "0  0::Arrested||1::Injured||2::Injured||3::Injure...   \n",
@@ -267,10 +264,10 @@
        "3                  28.0  \n",
        "4                  27.0  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,6 +278,96 @@
     "path = os.path.join(directory, 'data', 'gun-violence-data-cleaned.csv')\n",
     "gunViolence = pd.read_csv(path)\n",
     "gunViolence.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "303c5aaf6e5747de9dba001dfeabc370",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description=\"I'm a button\", style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "button = widgets.Button(description = \"I'm a button\")\n",
+    "display(button)\n",
+    "counter = 1\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    print(\"Hiya\")\n",
+    "\n",
+    "button.on_click(on_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e87d14f13f444c6c97f341ad9b18c7e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='year', description='column'), IntSlider(value=2017, description='x', max=201…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@widgets.interact\n",
+    "def selector(column='year', x=widgets.IntSlider(min=2009,max=2017,step=1,value=2017)):\n",
+    "    return gunViolence.loc[gunViolence[column] < x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb8b562944884982b8e5af0d902934f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=40.738, description='x', max=40.778, min=40.738, step=0.001), Output()…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Interactive map demonstration. \n",
+    "# TODO: plot actual data and replace slider with date or other metric.\n",
+    "@widgets.interact\n",
+    "def selector(x=widgets.FloatSlider(min=40.738,max=40.778,step=0.001,value=40.738)):\n",
+    "    folium_map = folium.Map(location=[40.738, -73.98],\n",
+    "                            zoom_start=13,\n",
+    "                            tiles=\"CartoDB dark_matter\")\n",
+    "    marker = folium.CircleMarker(location=[x, -73.98])\n",
+    "    marker.add_to(folium_map)\n",
+    "    return folium_map"
    ]
   },
   {
