--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,9 +598,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kmcen\\Miniconda3\\lib\\site-packages\\pandas\\core\\indexing.py:362: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[key] = _infer_fill_value(value)\n",
+      "C:\\Users\\kmcen\\Miniconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -845,7 +863,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -987,47 +1005,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Julian Sims</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Danielle Imani</td>\n",
        "      <td></td>\n",
-       "      <td>Arrested</td>\n",
+       "      <td>Injured</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>46</td>\n",
        "      <td>Male</td>\n",
-       "      <td></td>\n",
+       "      <td>Maurice Eugene</td>\n",
        "      <td></td>\n",
        "      <td>Injured</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Maurice Edmonds</td>\n",
        "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Injured</td>\n",
+       "      <td>Killed</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Injured</td>\n",
-       "      <td>Victim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>47</td>\n",
        "      <td>Female</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>Injured</td>\n",
+       "      <td>Sandra Palmer</td>\n",
+       "      <td>Family</td>\n",
+       "      <td>Killed</td>\n",
        "      <td>Subject</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1035,15 +1044,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   age  gender         name relationship    status     type\n",
-       "0   20    Male  Julian Sims               Arrested   Victim\n",
-       "1  NaN    Male                             Injured   Victim\n",
-       "2  NaN                                     Injured   Victim\n",
-       "3  NaN    Male                             Injured   Victim\n",
-       "4  NaN  Female                             Injured  Subject"
+       "  age  gender             name relationship   status     type\n",
+       "0  18  Female   Danielle Imani               Injured   Victim\n",
+       "1  46    Male   Maurice Eugene               Injured   Victim\n",
+       "2  14    Male  Maurice Edmonds                Killed   Victim\n",
+       "3  47  Female    Sandra Palmer       Family   Killed  Subject"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
