--- a/135-Merge-Datasets.ipynb
+++ b/135-Merge-Datasets.ipynb
@@ -989,12 +989,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "final_data = merged5[(merged5['n_killed'] != 0) & (merged5['n_injured'] != 0)]\n",
+    "\n",
+    "# Changing format of date column\n",
+    "final_data.loc[:,'year'] = pd.DatetimeIndex(final_data.loc[:,'date']).year\n",
+    "final_data.loc[:,'month'] = pd.DatetimeIndex(final_data.loc[:,'date']).month\n",
+    "final_data.loc[:,'day'] = pd.DatetimeIndex(final_data.loc[:,'date']).day\n",
+    "cols = final_data.columns.tolist()\n",
+    "cols = cols[:1] + cols[-3:] + cols[2:-3]\n",
+    "final_data = final_data[cols]\n",
+    "final_data.head()\n",
+    "\n",
     "final_data.to_csv('final_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>incident_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city_or_county</th>\n",
+       "      <th>address</th>\n",
+       "      <th>n_killed</th>\n",
+       "      <th>n_injured</th>\n",
+       "      <th>congressional_district</th>\n",
+       "      <th>...</th>\n",
+       "      <th>State_x</th>\n",
+       "      <th># of guns per capita</th>\n",
+       "      <th># of guns registered</th>\n",
+       "      <th>State_y</th>\n",
+       "      <th>State_y</th>\n",
+       "      <th>Permit Type</th>\n",
+       "      <th>Handgun_Carry_Permit_Fee</th>\n",
+       "      <th>Years_Valid</th>\n",
+       "      <th>5_Year_Cost</th>\n",
+       "      <th>Happiness Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>484268</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Somerset Street and Lee Street</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>236,377</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>License to carry firearms</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>485885</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Chester</td>\n",
+       "      <td>Rose and Upland Street</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>236,377</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>License to carry firearms</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>491609</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Saylorsburg</td>\n",
+       "      <td>1000 Ross Municipal Dr</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>236,377</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>License to carry firearms</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>480961</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>54th St. and Florence Ave</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>236,377</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>License to carry firearms</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>481268</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>10</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pittsburgh (Homewood)</td>\n",
+       "      <td>7200 block of Kelly Street</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>18.45</td>\n",
+       "      <td>236,377</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>License to carry firearms</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 55 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    incident_id  year  month  day         state         city_or_county  \\\n",
+       "1        484268  2013      4    9  Pennsylvania           Philadelphia   \n",
+       "2        485885  2013      4   28  Pennsylvania                Chester   \n",
+       "8        491609  2013      8    6  Pennsylvania            Saylorsburg   \n",
+       "11       480961  2013     10    6  Pennsylvania           Philadelphia   \n",
+       "14       481268  2013     10   21  Pennsylvania  Pittsburgh (Homewood)   \n",
+       "\n",
+       "                           address  n_killed  n_injured  \\\n",
+       "1   Somerset Street and Lee Street         1          3   \n",
+       "2           Rose and Upland Street         1          3   \n",
+       "8           1000 Ross Municipal Dr         3          4   \n",
+       "11       54th St. and Florence Ave         1          5   \n",
+       "14      7200 block of Kelly Street         2          5   \n",
+       "\n",
+       "    congressional_district       ...             State_x # of guns per capita  \\\n",
+       "1                      1.0       ...        Pennsylvania                18.45   \n",
+       "2                      1.0       ...        Pennsylvania                18.45   \n",
+       "8                     17.0       ...        Pennsylvania                18.45   \n",
+       "11                     2.0       ...        Pennsylvania                18.45   \n",
+       "14                    14.0       ...        Pennsylvania                18.45   \n",
+       "\n",
+       "   # of guns registered       State_y       State_y  \\\n",
+       "1               236,377  Pennsylvania  Pennsylvania   \n",
+       "2               236,377  Pennsylvania  Pennsylvania   \n",
+       "8               236,377  Pennsylvania  Pennsylvania   \n",
+       "11              236,377  Pennsylvania  Pennsylvania   \n",
+       "14              236,377  Pennsylvania  Pennsylvania   \n",
+       "\n",
+       "                  Permit Type Handgun_Carry_Permit_Fee Years_Valid  \\\n",
+       "1   License to carry firearms                       20           5   \n",
+       "2   License to carry firearms                       20           5   \n",
+       "8   License to carry firearms                       20           5   \n",
+       "11  License to carry firearms                       20           5   \n",
+       "14  License to carry firearms                       20           5   \n",
+       "\n",
+       "   5_Year_Cost Happiness Score  \n",
+       "1           20               2  \n",
+       "2           20               2  \n",
+       "8           20               2  \n",
+       "11          20               2  \n",
+       "14          20               2  \n",
+       "\n",
+       "[5 rows x 55 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data.head()"
    ]
   },
   {
