fixed final_data and filesystem cleaned

--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -30,17 +30,26 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\tyler\\appdata\\local\\programs\\python\\python35-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3044: DtypeWarning: Columns (33,36,44,45) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Get cleaned gun violence master dataset \n",
+    "# Get cleaned gun violence master dataset and states data\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
-    "path = os.path.join(directory, 'data', 'gun-violence-data-cleaned.csv')\n",
+    "path = os.path.join(directory, 'data', 'final_data.csv')\n",
     "gunViolence = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,10 +66,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1bf8b050>"
+       "<IPython.lib.display.IFrame at 0x14600750>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,6 +88,43 @@
     "                        tiles=\"Mapbox Bright\")\n",
     "folium.GeoJson('us_counties_20m.json', name='US Counties').add_to(folium_map)\n",
     "folium.GeoJson('us_states_20m.json', name='US States').add_to(folium_map)\n",
+    "folium.LayerControl().add_to(folium_map)\n",
+    "embed_map(folium_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choropleth Overlay (with Data)\n",
+    "\n",
+    "# TODO: Collapse gunViolence dataframe down by state and use for choropleth overlay\n",
+    "\n",
+    "def embed_map(m):\n",
+    "    from IPython.display import IFrame\n",
+    "    m.save('index.html')\n",
+    "    return IFrame('index.html', width='100%', height='750px')\n",
+    "\n",
+    "state_data = gunViolence[]\n",
+    "\n",
+    "folium_map = folium.Map(location=[35, -97],\n",
+    "                        zoom_start=4,\n",
+    "                        tiles=\"Mapbox Bright\")\n",
+    "folium.GeoJson('us_counties_20m.json', name='US Counties').add_to(folium_map)\n",
+    "folium.GeoJson('us_states_20m.json', name='US States').add_to(folium_map)\n",
+    "folium.Choropleth(\n",
+    "    geo_data='us_states_20m.json',\n",
+    "    name='US States',\n",
+    "    data=state_data,\n",
+    "    columns=['State', 'Unemployment'],\n",
+    "    key_on='feature.properties.name',\n",
+    "    fill_color='YlGn',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    legend_name='Unemployment Rate (%)'\n",
+    ").add_to(m)\n",
     "folium.LayerControl().add_to(folium_map)\n",
     "embed_map(folium_map)"
    ]
