Interactivity and Choropleth data by State

--- a/135-Merge-Datasets.ipynb
+++ b/135-Merge-Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,11 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the other CSVs\n",
+    "\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
     "mental_health = pd.read_csv(os.path.join(directory, 'data', 'EverytownNICSMentalHealth.csv'))\n",
     "gun_safety = pd.read_csv(os.path.join(directory, 'data', 'GiffordsData.csv'))\n",
@@ -112,7 +113,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Giffords Gun Safety Score</th>\n",
+       "      <th>Gun Deaths per 100k People (2018)</th>\n",
+       "      <th>Gun Death Rate (Ranked High to Low)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.9</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  Giffords Gun Safety Score  Gun Deaths per 100k People (2018)  \\\n",
+       "0     Alabama                        1.0                               22.9   \n",
+       "1      Alaska                        1.0                               24.5   \n",
+       "2     Arizona                        1.0                               15.7   \n",
+       "3    Arkansas                        1.0                               20.2   \n",
+       "4  California                       12.0                                7.8   \n",
+       "\n",
+       "   Gun Death Rate (Ranked High to Low)  \n",
+       "0                                  2.0  \n",
+       "1                                  1.0  \n",
+       "2                                 18.0  \n",
+       "3                                  7.0  \n",
+       "4                                 44.0  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Giffords pre-processing: Convert grades (A-F) to numbers (12-1) and rename column\n",
+    "grades = {\n",
+    "        'A': 12,\n",
+    "        'A-': 11,\n",
+    "        'B+': 10,\n",
+    "        'B': 9,\n",
+    "        'B-': 8,\n",
+    "        'C+': 7,\n",
+    "        'C': 6,\n",
+    "        'C-': 5,\n",
+    "        'D+': 4,\n",
+    "        'D': 3,\n",
+    "        'D-': 2,\n",
+    "        'F': 1,\n",
+    "}\n",
+    "gun_safety['Giffords_Gun_Safety_Grade'] = gun_safety['Giffords_Gun_Safety_Grade'].map(grades)\n",
+    "gun_safety.rename(columns={'Giffords_Gun_Safety_Grade':'Giffords Gun Safety Score', \n",
+    "                          'Gun_Death_Rate_2018 (per 100k people)': 'Gun Deaths per 100k People (2018)',\n",
+    "                          'Gun_Death_Rank': 'Gun Death Rate (Ranked High to Low)'}, inplace=True)\n",
+    "gun_safety.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +438,7 @@
        "4               2      0      2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +547,7 @@
        "4                2       2"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -484,14 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
