Fixed final_data.csv by removing commas from numbers

--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -42,12 +42,13 @@
     "# Get cleaned gun violence master dataset and states data\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
     "path = os.path.join(directory, 'data', 'final_data.csv')\n",
-    "gunViolence = pd.read_csv(path)"
+    "gunViolence = pd.read_csv(path)\n",
+    "gunViolence.fillna(0, inplace=True)  # Fill in nans w/ zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea04b61984dc49d7819bbd46bdbfe5a2",
+       "model_id": "9a2cd649c3e14c1c862a29b1a26c40c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Factor to Plot:', index=6, layout=Layout(width='40%'), options=('Mental_Health_Records_S…"
+       "Dropdown(description='Factor to Plot:', index=5, layout=Layout(width='40%'), options=('Mental_Health_Records_S…"
       ]
      },
      "metadata": {},
@@ -109,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b94b912593824176afa4a9bbd6c09533",
+       "model_id": "957c88066a374a4dbbd8952335d5a7dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d66953b726504e1297a1ea7b74de979e",
+       "model_id": "02d4420ac09a495a8f639ef9e38b86c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +149,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x17743590>"
+       "<IPython.lib.display.IFrame at 0x1be60457f28>"
       ]
      },
      "metadata": {},
@@ -324,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
