--- a/135-Merge-Datasets.ipynb
+++ b/135-Merge-Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +105,8 @@
     "\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
     "mental_health = pd.read_csv(os.path.join(directory, 'data', 'EverytownNICSMentalHealth.csv'))\n",
+    "# Remove commas from number values\n",
+    "mental_health[mental_health.columns] = mental_health[mental_health.columns].replace({',': ''}, regex=True)\n",
     "gun_safety = pd.read_csv(os.path.join(directory, 'data', 'GiffordsData.csv'))\n",
     "gun_ownership = pd.read_csv(os.path.join(directory, 'data', 'Gun ownership.csv'))\n",
     "happiness = pd.read_csv(os.path.join(directory, 'data', 'happiness.csv'))\n",
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
        "4                                 44.0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +440,7 @@
        "4               2      0      2"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +549,7 @@
        "4                2       2"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
