--- a/Interactivity.ipynb
+++ b/Interactivity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tyler\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2728: DtypeWarning: Columns (33,36) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "# Get cleaned gun violence master dataset and states data\n",
     "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
@@ -55,111 +64,32 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>Rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Newton County</td>\n",
-       "      <td>6.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Panola County</td>\n",
-       "      <td>9.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Monroe County</td>\n",
-       "      <td>7.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Hinds County</td>\n",
-       "      <td>6.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>February</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Kemper County</td>\n",
-       "      <td>10.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Year     Month        State         County  Rate\n",
-       "0  2015  February  Mississippi  Newton County   6.1\n",
-       "1  2015  February  Mississippi  Panola County   9.4\n",
-       "2  2015  February  Mississippi  Monroe County   7.9\n",
-       "3  2015  February  Mississippi   Hinds County   6.1\n",
-       "4  2015  February  Mississippi  Kemper County  10.6"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tyler\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if sys.path[0] == '':\n"
+     ]
     }
    ],
-   "source": [
-    "countyData.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "stateCols = ['state', 'Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', \n",
     "             'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score',  'Gun Deaths per 100k People (2018)', \n",
     "             'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type',  \n",
     "             'Handgun_Carry_Permit_Fee', 'Years_Valid', '5_Year_Cost', 'Happiness Score']\n",
-    "\n",
-    "# countyCols = ['']\n",
-    "\n",
+    "countyCols = ['County', 'Rate']\n",
     "stateData = gunViolence[stateCols].drop_duplicates('state')\n",
-    "\n"
+    "countyData = countyData[countyCols].drop_duplicates('County')\n",
+    "countyData.columns.values[1] = '2015 Unemployment Rate'\n",
+    "countyData = countyData.reset_index()\n",
+    "countyData = countyData[['County', '2015 Unemployment Rate']]\n",
+    "for i in range(len(countyData['County'])):\n",
+    "    countyData['County'][i] = countyData['County'][i][:-7]\n",
+    "\n",
+    "dropdownOptions = np.concatenate([stateData.columns.values[1:],countyData.columns.values[1:]])"
    ]
   },
   {
@@ -171,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +112,7 @@
     "    return IFrame('index.html', width='100%', height='650px')\n",
     "\n",
     "# Define list of factors that should be plotted with high values as red instead of green\n",
-    "badFactorsList = ['Gun_Death_Rate_2018 (per 100k people)', '# of guns per capita', '# of guns registered',]\n",
+    "badFactorsList = ['Gun_Death_Rate_2018 (per 100k people)', '# of guns per capita', '# of guns registered','2015 Unemployment Rate']\n",
     "def getColColor(col):\n",
     "    if (col in badFactorsList):\n",
     "        return 'OrRd'\n",
@@ -202,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -210,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06e944b7f05e421c9353c50cd93dff07",
+       "model_id": "009770dbe2df4fbaa20a933e3c75ad88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,7 +160,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Factor to Plot:', index=12, layout=Layout(width='40%'), options=('Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', 'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score', 'Gun Deaths per 100k People (2018)', 'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type', 'Handgun_Carry_Permit_Fee', 'Years_Valid', '5_Year_Cost', 'Happiness Score'), style=DescriptionStyle(description_width='initial'), value='5_Year_Cost')"
+       "Dropdown(description='Factor to Plot:', index=12, layout=Layout(width='40%'), options=('Mental_Health_Records_Submitted_2008', 'Mental_Health_Records_Submitted_2017', 'Gun_Sale_Denials_2008', 'Gun_Sale_Denials_2017', 'Giffords Gun Safety Score', 'Gun Deaths per 100k People (2018)', 'Gun Death Rate (Ranked High to Low)', '# of guns per capita', '# of guns registered', 'Permit Type', 'Handgun_Carry_Permit_Fee', 'Years_Valid', '5_Year_Cost', 'Happiness Score', '2015 Unemployment Rate'), style=DescriptionStyle(description_width='initial'), value='5_Year_Cost')"
       ]
      },
      "metadata": {},
@@ -239,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ee6b5a47ba145a292479254ff0f7056",
+       "model_id": "2d2493cf48c245b58cacac2bb68c9e42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,7 +189,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "IntSlider(value=100, description='Number of Incidents:', layout=Layout(width='40%'), max=1000, step=100, style=SliderStyle(description_width='initial'))"
+       "IntSlider(value=2015, description='Year:', layout=Layout(width='40%'), max=2018, min=2014, style=SliderStyle(description_width='initial'))"
       ]
      },
      "metadata": {},
@@ -268,7 +198,36 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "200574df0e1c4cc698a42b6e55cc2fa3",
+       "model_id": "acefe1ab8670430dbded571c7d37547a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>IntSlider</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "IntSlider(value=500, description='Number of Incidents:', layout=Layout(width='40%'), max=20000, step=100, style=SliderStyle(description_width='initial'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61b04757530645cea039e6285880323a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,7 +267,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x224d21afa90>"
+       "<IPython.lib.display.IFrame at 0x1f20e5e0b70>"
       ]
      },
      "metadata": {},
@@ -317,7 +276,7 @@
    ],
    "source": [
     "dropdown = widgets.Dropdown(\n",
-    "    options=stateData.columns.values[1:],\n",
+    "    options=dropdownOptions,\n",
     "    value='5_Year_Cost',\n",
     "    description='Factor to Plot:',\n",
     "    disabled=False,\n",
@@ -325,30 +284,34 @@
     "    style={'description_width': 'initial'}\n",
     ")\n",
     "\n",
-    "slider = widgets.IntSlider(min=0,max=1000,step=100,value=500,description='Number of Incidents:',layout=Layout(width='40%'),style={'description_width': 'initial'})\n",
+    "yearSlider = widgets.IntSlider(min=2014,max=2018,step=1,value=2015,description='Year:',layout=Layout(width='40%'),style={'description_width': 'initial'})\n",
+    "numSlider = widgets.IntSlider(min=0,max=20000,step=100,value=500,description='Number of Incidents:',layout=Layout(width='40%'),style={'description_width': 'initial'})\n",
     "button = widgets.Button(description = \"Go!\")\n",
+    "\n",
     "display(dropdown)\n",
-    "display(slider)\n",
+    "display(yearSlider)\n",
+    "display(numSlider)\n",
     "display(button)\n",
     "\n",
     "\n",
     "def on_button_clicked(b):\n",
     "    clear_output()\n",
     "    display(dropdown)\n",
-    "    display(slider)\n",
+    "    display(yearSlider)\n",
+    "    display(numSlider)\n",
     "    display(button)\n",
     "    folium_map = folium.Map(location=[35, -97], zoom_start=4, tiles=\"Mapbox Bright\")   \n",
     "    cluster = MarkerCluster(name='Gun Violence Incidents')\n",
-    "    for i, row in gunViolence.sample(frac=1).head(slider.value).iterrows():\n",
+    "    for i, row in gunViolence[gunViolence['year'] == yearSlider.value].sample(frac=1).head(numSlider.value).iterrows():\n",
     "        cluster.add_child(folium.CircleMarker(location=[row.latitude,row.longitude], radius =5*(row.n_killed+row.n_injured), fill=True, color=getMarkerColor(row.n_killed), popup=folium.Popup('Date: '+str(row.month)+'-'+str(row.day)+'-'+str(row.year)+'\\nLives Lost: '+str(row.n_killed),max_width=200)))\n",
     "    folium_map.add_child(cluster)\n",
     "    \n",
-    "    if (dropdown.value == 'Unemployment'):\n",
+    "    if (dropdown.value == '2015 Unemployment Rate'):\n",
     "        folium.Choropleth(\n",
     "            geo_data='data/us_counties_20m.json',\n",
     "            name=dropdown.value,\n",
     "            data=countyData,\n",
-    "            columns=['state', dropdown.value],\n",
+    "            columns=['County', dropdown.value],\n",
     "            key_on='feature.properties.NAME',\n",
     "            fill_color=getColColor(dropdown.value),\n",
     "            fill_opacity=0.5,\n",
@@ -367,6 +330,14 @@
     "            line_opacity=0.2,\n",
     "            legend_name=dropdown.value\n",
     "        ).add_to(folium_map)\n",
+    "    folium.GeoJson(data='data/us_states_20m.json',\n",
+    "               name='US States',smooth_factor=2,\n",
+    "               style_function=lambda x: {'color':'black','fillColor':'transparent','weight':1},\n",
+    "                tooltip=folium.GeoJsonTooltip(fields=['NAME'],\n",
+    "                                              labels=False,\n",
+    "                                              sticky=False),\n",
+    "               highlight_function=lambda x: {'weight':3,'fillColor':'grey'}\n",
+    "              ).add_to(folium_map)\n",
     "    folium.LayerControl().add_to(folium_map)\n",
     "    toDisp = embed_map(folium_map)\n",
     "    display(toDisp)\n",
