ML ready on Flask

--- a/ML_scrape_data_bruh.ipynb
+++ b/ML_scrape_data_bruh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "118685           66  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,12 +912,14 @@
     "                                      'Gun_Sale_Denials_2017': 'Gun Denials 2017',\n",
     "                                      'Rank': 'Gun Ownership Rank',\n",
     "                                      '5_Year_Cost': '5 Year Permit Cost'\n",
-    "                                     })"
+    "                                     })\n",
+    "\n",
+    "orig_state_data = state_data.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,18 +1219,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2016, 75)\n",
+      "(2549, 75)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(predictors.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the predictions\n",
-    "predictions = regr.predict(predictors)\n",
+    "predictions = regr.predict(predictors) # using RandomForestClassifier\n",
+    "# trans_predictors = poly_reg3.transform(predictors) # using 3rd order poly\n",
+    "# predictions = pol_reg3.predict(trans_predictors) # using 3rd order poly\n",
     "predictors['predictions'] = predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -1284,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1372,9 @@
     "import pickle\n",
     "\n",
     "# Dump it to a file that can be read elsewhere\n",
-    "pickle.dump(regr, open( 'data/rf.pkl', 'wb' ))"
+    "pickle.dump(regr, open( 'data/rf.pkl', 'wb' ))\n",
+    "pickle.dump(poly_reg3, open( 'data/poly3.pkl', 'wb' ))\n",
+    "pickle.dump(pol_reg3, open( 'data/lr3.pkl', 'wb' ))"
    ]
   },
   {
@@ -1361,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1605,7 @@
        "[5 rows x 75 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1836,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1823,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 73,
    "metadata": {
     "scrolled": false
    },
@@ -1936,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1970,7 @@
        "array([ 2,  3,  6,  5,  9,  4, 29, 11, 16], dtype=int64)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
